编译原理/lab2+3/parser.output
Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID
   11       | VarDec LB INT RB

   12 FuncDec: ID LP VarList RP
   13        | ID LP RP

   14 VarList: ParamDec
   15        | ParamDec COMMA VarList

   16 ParamDec: Specifier VarDec

   17 CompSt: LC DefList StmList RC

   18 StmList: /* empty */
   19        | Stmt StmList

   20 Stmt: Exp SEMI
   21     | CompSt
   22     | RETURN Exp SEMI
   23     | IF LP Exp RP Stmt
   24     | IF LP Exp RP Stmt ELSE Stmt
   25     | WHILE LP Exp RP Stmt

   26 DefList: /* empty */
   27        | Def DefList

   28 Def: Specifier DecList SEMI

   29 DecList: Dec
   30        | Dec COMMA DecList

   31 Dec: VarDec
   32    | VarDec ASSIGNOP Exp

   33 Exp: Exp ASSIGNOP Exp
   34    | Exp AND Exp
   35    | Exp OR Exp
   36    | Exp RELOP Exp
   37    | Exp PLUS Exp
   38    | Exp MINUS Exp
   39    | Exp STAR Exp
   40    | Exp DIV Exp
   41    | LP Exp RP
   42    | MINUS Exp
   43    | Exp COMP_PLUS Exp
   44    | Exp COMP_MINUS Exp
   45    | Exp INC
   46    | Exp DEC
   47    | INC Exp
   48    | DEC Exp
   49    | NOT Exp
   50    | ID LP Args RP
   51    | ID LP RP
   52    | VarDec LB INT RB
   53    | ID
   54    | INT
   55    | FLOAT
   56    | CHAR

   57 Args: Exp COMMA Args
   58     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 11 52 54
ID (259) 10 12 13 50 51 53
RELOP (260) 36
TYPE (261) 7
FLOAT (262) 55
CHAR (263) 56
LP (264) 12 13 23 24 25 41 50 51
RP (265) 12 13 23 24 25 41 50 51
LB (266) 11 52
RB (267) 11 52
LC (268) 17
RC (269) 17
SEMI (270) 4 6 20 22 28
COMMA (271) 9 15 30 57
PLUS (272) 37
MINUS (273) 38 42
STAR (274) 39
DIV (275) 40
ASSIGNOP (276) 32 33
AND (277) 34
OR (278) 35
NOT (279) 49
IF (280) 23 24
ELSE (281) 24
WHILE (282) 25
RETURN (283) 22
INC (284) 45 47
DEC (285) 46 48
COMP_PLUS (286) 43
COMP_MINUS (287) 44
UMINUS (288)
LOWER_THEN_ELSE (289)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1, on right: 0
ExtDefList (37)
    on left: 2 3, on right: 1 3
ExtDef (38)
    on left: 4 5 6, on right: 3
Specifier (39)
    on left: 7, on right: 4 5 16 28
ExtDecList (40)
    on left: 8 9, on right: 4 9
VarDec (41)
    on left: 10 11, on right: 8 9 11 16 31 32 52
FuncDec (42)
    on left: 12 13, on right: 5
VarList (43)
    on left: 14 15, on right: 12 15
ParamDec (44)
    on left: 16, on right: 14 15
CompSt (45)
    on left: 17, on right: 5 21
StmList (46)
    on left: 18 19, on right: 17 19
Stmt (47)
    on left: 20 21 22 23 24 25, on right: 19 23 24 25
DefList (48)
    on left: 26 27, on right: 17 27
Def (49)
    on left: 28, on right: 27
DecList (50)
    on left: 29 30, on right: 28 30
Dec (51)
    on left: 31 32, on right: 29 30
Exp (52)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56, on right: 20 22 23 24 25 32 33 34 35 36 37 38
    39 40 41 42 43 44 45 46 47 48 49 57 58
Args (53)
    on left: 57 58, on right: 50 57


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   10 VarDec: ID .
   12 FuncDec: ID . LP VarList RP
   13        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   11 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 16
    COMMA  shift, and go to state 17

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 18

    CompSt  go to state 19


state 14

   12 FuncDec: ID LP . VarList RP
   13        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 20

    Specifier  go to state 21
    VarList    go to state 22
    ParamDec   go to state 23


state 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 16

   11 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 24


state 17

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 25

    ExtDecList  go to state 26
    VarDec      go to state 12


state 18

   17 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 26 (DefList)

    Specifier  go to state 27
    DefList    go to state 28
    Def        go to state 29


state 19

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 20

   13 FuncDec: ID LP RP .

    $default  reduce using rule 13 (FuncDec)


state 21

   16 ParamDec: Specifier . VarDec

    ID  shift, and go to state 25

    VarDec  go to state 30


state 22

   12 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 31


state 23

   14 VarList: ParamDec .
   15        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 32

    $default  reduce using rule 14 (VarList)


state 24

   11 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 33


state 25

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


state 26

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 27

   28 Def: Specifier . DecList SEMI

    ID  shift, and go to state 25

    VarDec   go to state 34
    DecList  go to state 35
    Dec      go to state 36


state 28

   17 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 18
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    IF      shift, and go to state 44
    WHILE   shift, and go to state 45
    RETURN  shift, and go to state 46
    INC     shift, and go to state 47
    DEC     shift, and go to state 48

    $default  reduce using rule 18 (StmList)

    VarDec   go to state 49
    CompSt   go to state 50
    StmList  go to state 51
    Stmt     go to state 52
    Exp      go to state 53


state 29

   27 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 26 (DefList)

    Specifier  go to state 27
    DefList    go to state 54
    Def        go to state 29


state 30

   11 VarDec: VarDec . LB INT RB
   16 ParamDec: Specifier VarDec .

    LB  shift, and go to state 16

    $default  reduce using rule 16 (ParamDec)


state 31

   12 FuncDec: ID LP VarList RP .

    $default  reduce using rule 12 (FuncDec)


state 32

   15 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 21
    VarList    go to state 55
    ParamDec   go to state 23


state 33

   11 VarDec: VarDec LB INT RB .

    $default  reduce using rule 11 (VarDec)


state 34

   11 VarDec: VarDec . LB INT RB
   31 Dec: VarDec .
   32    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 16
    ASSIGNOP  shift, and go to state 56

    $default  reduce using rule 31 (Dec)


state 35

   28 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 57


state 36

   29 DecList: Dec .
   30        | Dec . COMMA DecList

    COMMA  shift, and go to state 58

    $default  reduce using rule 29 (DecList)


state 37

   54 Exp: INT .

    $default  reduce using rule 54 (Exp)


state 38

   10 VarDec: ID .
   50 Exp: ID . LP Args RP
   51    | ID . LP RP
   53    | ID .

    LP  shift, and go to state 59

    LB        reduce using rule 10 (VarDec)
    $default  reduce using rule 53 (Exp)


state 39

   55 Exp: FLOAT .

    $default  reduce using rule 55 (Exp)


state 40

   56 Exp: CHAR .

    $default  reduce using rule 56 (Exp)


state 41

   41 Exp: LP . Exp RP

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 60


state 42

   42 Exp: MINUS . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 61


state 43

   49 Exp: NOT . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 62


state 44

   23 Stmt: IF . LP Exp RP Stmt
   24     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 63


state 45

   25 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 64


state 46

   22 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 65


state 47

   47 Exp: INC . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 66


state 48

   48 Exp: DEC . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 67


state 49

   11 VarDec: VarDec . LB INT RB
   52 Exp: VarDec . LB INT RB

    LB  shift, and go to state 68


state 50

   21 Stmt: CompSt .

    $default  reduce using rule 21 (Stmt)


state 51

   17 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 69


state 52

   19 StmList: Stmt . StmList

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 18
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    IF      shift, and go to state 44
    WHILE   shift, and go to state 45
    RETURN  shift, and go to state 46
    INC     shift, and go to state 47
    DEC     shift, and go to state 48

    $default  reduce using rule 18 (StmList)

    VarDec   go to state 49
    CompSt   go to state 50
    StmList  go to state 70
    Stmt     go to state 52
    Exp      go to state 53


state 53

   20 Stmt: Exp . SEMI
   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC

    RELOP       shift, and go to state 71
    SEMI        shift, and go to state 72
    PLUS        shift, and go to state 73
    MINUS       shift, and go to state 74
    STAR        shift, and go to state 75
    DIV         shift, and go to state 76
    ASSIGNOP    shift, and go to state 77
    AND         shift, and go to state 78
    OR          shift, and go to state 79
    INC         shift, and go to state 80
    DEC         shift, and go to state 81
    COMP_PLUS   shift, and go to state 82
    COMP_MINUS  shift, and go to state 83


state 54

   27 DefList: Def DefList .

    $default  reduce using rule 27 (DefList)


state 55

   15 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 15 (VarList)


state 56

   32 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 84


state 57

   28 Def: Specifier DecList SEMI .

    $default  reduce using rule 28 (Def)


state 58

   30 DecList: Dec COMMA . DecList

    ID  shift, and go to state 25

    VarDec   go to state 34
    DecList  go to state 85
    Dec      go to state 36


state 59

   50 Exp: ID LP . Args RP
   51    | ID LP . RP

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    RP     shift, and go to state 86
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 87
    Args    go to state 88


state 60

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   41    | LP Exp . RP
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC

    RELOP       shift, and go to state 71
    RP          shift, and go to state 89
    PLUS        shift, and go to state 73
    MINUS       shift, and go to state 74
    STAR        shift, and go to state 75
    DIV         shift, and go to state 76
    ASSIGNOP    shift, and go to state 77
    AND         shift, and go to state 78
    OR          shift, and go to state 79
    INC         shift, and go to state 80
    DEC         shift, and go to state 81
    COMP_PLUS   shift, and go to state 82
    COMP_MINUS  shift, and go to state 83


state 61

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   42    | MINUS Exp .
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC

    INC  shift, and go to state 80
    DEC  shift, and go to state 81

    $default  reduce using rule 42 (Exp)


state 62

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC
   49    | NOT Exp .

    INC  shift, and go to state 80
    DEC  shift, and go to state 81

    $default  reduce using rule 49 (Exp)


state 63

   23 Stmt: IF LP . Exp RP Stmt
   24     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 90


state 64

   25 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 91


state 65

   22 Stmt: RETURN Exp . SEMI
   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC

    RELOP       shift, and go to state 71
    SEMI        shift, and go to state 92
    PLUS        shift, and go to state 73
    MINUS       shift, and go to state 74
    STAR        shift, and go to state 75
    DIV         shift, and go to state 76
    ASSIGNOP    shift, and go to state 77
    AND         shift, and go to state 78
    OR          shift, and go to state 79
    INC         shift, and go to state 80
    DEC         shift, and go to state 81
    COMP_PLUS   shift, and go to state 82
    COMP_MINUS  shift, and go to state 83


state 66

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC
   47    | INC Exp .

    INC  shift, and go to state 80
    DEC  shift, and go to state 81

    $default  reduce using rule 47 (Exp)


state 67

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC
   48    | DEC Exp .

    INC  shift, and go to state 80
    DEC  shift, and go to state 81

    $default  reduce using rule 48 (Exp)


state 68

   11 VarDec: VarDec LB . INT RB
   52 Exp: VarDec LB . INT RB

    INT  shift, and go to state 93


state 69

   17 CompSt: LC DefList StmList RC .

    $default  reduce using rule 17 (CompSt)


state 70

   19 StmList: Stmt StmList .

    $default  reduce using rule 19 (StmList)


state 71

   36 Exp: Exp RELOP . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 94


state 72

   20 Stmt: Exp SEMI .

    $default  reduce using rule 20 (Stmt)


state 73

   37 Exp: Exp PLUS . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 95


state 74

   38 Exp: Exp MINUS . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 96


state 75

   39 Exp: Exp STAR . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 97


state 76

   40 Exp: Exp DIV . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 98


state 77

   33 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 99


state 78

   34 Exp: Exp AND . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 100


state 79

   35 Exp: Exp OR . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 101


state 80

   45 Exp: Exp INC .

    $default  reduce using rule 45 (Exp)


state 81

   46 Exp: Exp DEC .

    $default  reduce using rule 46 (Exp)


state 82

   43 Exp: Exp COMP_PLUS . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 102


state 83

   44 Exp: Exp COMP_MINUS . Exp

    INT    shift, and go to state 37
    ID     shift, and go to state 38
    FLOAT  shift, and go to state 39
    CHAR   shift, and go to state 40
    LP     shift, and go to state 41
    MINUS  shift, and go to state 42
    NOT    shift, and go to state 43
    INC    shift, and go to state 47
    DEC    shift, and go to state 48

    VarDec  go to state 49
    Exp     go to state 103


state 84

   32 Dec: VarDec ASSIGNOP Exp .
   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC

    RELOP       shift, and go to state 71
    PLUS        shift, and go to state 73
    MINUS       shift, and go to state 74
    STAR        shift, and go to state 75
    DIV         shift, and go to state 76
    ASSIGNOP    shift, and go to state 77
    AND         shift, and go to state 78
    OR          shift, and go to state 79
    INC         shift, and go to state 80
    DEC         shift, and go to state 81
    COMP_PLUS   shift, and go to state 82
    COMP_MINUS  shift, and go to state 83

    $default  reduce using rule 32 (Dec)


state 85

   30 DecList: Dec COMMA DecList .

    $default  reduce using rule 30 (DecList)


state 86

   51 Exp: ID LP RP .

    $default  reduce using rule 51 (Exp)


state 87

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC
   57 Args: Exp . COMMA Args
   58     | Exp .

    RELOP       shift, and go to state 71
    COMMA       shift, and go to state 104
    PLUS        shift, and go to state 73
    MINUS       shift, and go to state 74
    STAR        shift, and go to state 75
    DIV         shift, and go to state 76
    ASSIGNOP    shift, and go to state 77
    AND         shift, and go to state 78
    OR          shift, and go to state 79
    INC         shift, and go to state 80
    DEC         shift, and go to state 81
    COMP_PLUS   shift, and go to state 82
    COMP_MINUS  shift, and go to state 83

    $default  reduce using rule 58 (Args)


state 88

   50 Exp: ID LP Args . RP

    RP  shift, and go to state 105


state 89

   41 Exp: LP Exp RP .

    $default  reduce using rule 41 (Exp)


state 90

   23 Stmt: IF LP Exp . RP Stmt
   24     | IF LP Exp . RP Stmt ELSE Stmt
   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC

    RELOP       shift, and go to state 71
    RP          shift, and go to state 106
    PLUS        shift, and go to state 73
    MINUS       shift, and go to state 74
    STAR        shift, and go to state 75
    DIV         shift, and go to state 76
    ASSIGNOP    shift, and go to state 77
    AND         shift, and go to state 78
    OR          shift, and go to state 79
    INC         shift, and go to state 80
    DEC         shift, and go to state 81
    COMP_PLUS   shift, and go to state 82
    COMP_MINUS  shift, and go to state 83


state 91

   25 Stmt: WHILE LP Exp . RP Stmt
   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC

    RELOP       shift, and go to state 71
    RP          shift, and go to state 107
    PLUS        shift, and go to state 73
    MINUS       shift, and go to state 74
    STAR        shift, and go to state 75
    DIV         shift, and go to state 76
    ASSIGNOP    shift, and go to state 77
    AND         shift, and go to state 78
    OR          shift, and go to state 79
    INC         shift, and go to state 80
    DEC         shift, and go to state 81
    COMP_PLUS   shift, and go to state 82
    COMP_MINUS  shift, and go to state 83


state 92

   22 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 22 (Stmt)


state 93

   11 VarDec: VarDec LB INT . RB
   52 Exp: VarDec LB INT . RB

    RB  shift, and go to state 108


state 94

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   36    | Exp RELOP Exp .
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC

    PLUS        shift, and go to state 73
    MINUS       shift, and go to state 74
    STAR        shift, and go to state 75
    DIV         shift, and go to state 76
    INC         shift, and go to state 80
    DEC         shift, and go to state 81
    COMP_PLUS   shift, and go to state 82
    COMP_MINUS  shift, and go to state 83

    $default  reduce using rule 36 (Exp)


state 95

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   37    | Exp PLUS Exp .
   38    | Exp . MINUS Exp
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC

    STAR  shift, and go to state 75
    DIV   shift, and go to state 76
    INC   shift, and go to state 80
    DEC   shift, and go to state 81

    $default  reduce using rule 37 (Exp)


state 96

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . AND Exp
   35    | Exp . OR Exp
   36    | Exp . RELOP Exp
   37    | Exp . PLUS Exp
   38    | Exp . MINUS Exp
   38    | Exp MINUS Exp .
   39    | Exp . STAR Exp
   40    | Exp . DIV Exp
   43    | Exp . COMP_PLUS Exp
   44    | Exp . COMP_MINUS Exp
   45    | Exp . INC
   46    | Exp . DEC

    STAR  shift, and go to state 75
    DIV   shift, and go to state 76
    INC   shift, and go to state 80
    DEC   shift, and go to state 81

    $default  reduce using rule 38 (Exp)


state 97
